--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rc-pagination": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
